<resources>
    <string name="app_name">Подписка</string>
    <string name="title">Подписка</string>
    <string name="user_name">Имя пользователя</string>
    <string name="txtEmail">Электронная почта</string>
    <string name="txt_btn_ok">ОК</string>
    <string name="txt_btn_clear">Очистить</string>
    <string name="user_name_input_example">Елена</string>
    <string name="mail_input_example">elena@ggl.com</string>
</resources>
